--- a/CSS/global.css
+++ b/CSS/global.css
@@ -12,11 +12,71 @@ Aqui vamos a definir estilos y variables que se reutilizen en todo el sitio.
 
     --font-primary: 'Radio Canada';
 
-    --space-small:16px;
-    --space-normal: 32px;
+    --space-small: 16px;
+    --space-normal: 24px;
+    --space-medium: 32px;
 }
+
 
 body {
-    font-family: var(--font-primary);
+    background-color: var(--light-color);
+    font-family: var(--body-font);
+    color: var(--dark-color);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--title-font);
+    color: var(--dark-color);
+    text-transform: lowercase;
+}
+
+h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+h3 {
+    font-size: 1.75rem;
+    margin-bottom: 0.8rem;
+}
+
+/* Buttons */
+
+.button-primary {
+    display: flex;
+    align-items: center;
+    gap: var(--space-small);
+    padding: var(--space-small) var(--space-normal);
+    background-color: var(--secondary-color);
+    color: var(--dark-color);
+    border-radius: 32px;
+    font-family: var(--title-font);
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    transition: background-color 0.3s ease;
+    transition: color 0.3s ease;
+}
+
+.button-primary:hover {
+    color: var(--light-color);
+    background-color: var(--primary-color);
+}
+
+.button-secondary {
+    display: flex;
+    align-items: center;
+    gap: var(--space-small);
+    padding: var(--space-small) var(--space-normal);
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    border-radius: 32px;
+    font-family: var(--title-font);
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    transition: background-color 0.3s ease;
+    transition: color 0.3s ease;
+}
+
+.button-secondary:hover {
+    color: var(--dark-color);
+    background-color: var(--light-color);
