--- a/CSS/style.css
+++ b/CSS/style.css
@@ -177,3 +177,44 @@ background-color: gray;
 .carousel-controls span {
     font-size: 3rem;
 }
+
+/* About */
+
+.about{
+    background-image: url(../assets/Background.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+}
+
+.about > div {
+    display: flex;
+    padding: var(--space-medium);
+}
+
+.about-image,
+.about-content{
+    width: 50%;
+}
+
+.about-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-image img {
+    width: 240px;
+    max-width: 300px;
+    min-width: 200px;
+}
+
+.about-content h2,
+.about-content p{
+    color: white;
+}
+.about-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
